Fixed table of contents on mobile devices

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -276,6 +276,10 @@ body {
     .site-archive-header .no-image .site-header-content {
         padding: 12vw 0 20px;
     }
+
+    .toc-container {
+        display: none;
+    }
 }
 
 
